Nothing but a fucking fag

--- a/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/familia/popup/adicionar-integrante-familiar-popup.html
+++ b/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/familia/popup/adicionar-integrante-familiar-popup.html
@@ -189,23 +189,53 @@
 					</div>
 				</md-tab>
 				
-				<md-tab label="documentos">
+				<md-tab ng-if="model.integranteFamiliar.entity.id" label="documentos">
 				
 					<div layout="column" style="height:100%">
 			  			<div class="default-form">
-			  			
+			  				
+			  				<div layout="row" flex>
+			  					<md-input-container layout="column" gap="20px">
+				            		<label>Documento</label>
+				            		<md-select style="margin-top:24px" required name="documento" ng-model="model.documentoIntegranteFamiliar.entity.tipoDocumento">
+							        	<md-option required ng-repeat="documento in allTiposDocumentos" value="{{documento}}">{{documento}}</md-option>
+							        </md-select>
+							        
+							        <div ng-messages="model.integranteFamiliar.form.documento.$error">
+					               		<div ng-message="required" ng-if="model.integranteFamiliar.form.$submitted">Campo obrigatório</div>
+					                </div>
+				            	</md-input-container>
+				            	
+				            	<md-input-container layout="column" flex="30">
+						    		<label>Número</label>
+					                <input maxlength="144" name="numero" required ng-model="model.documentoIntegranteFamiliar.entity.numeroDocumento">
+					
+					                <div ng-messages="model.integranteFamiliar.form.numero.$error">
+					                	<div ng-message="required" ng-if="model.integranteFamiliar.form.$submitted">Campo obrigatório</div>
+					                </div>	
+					            </md-input-container>
+					            
+					            <md-button style="height:20px; margin-top:32px" class="md-raised md-primary md-hue-3" type="button" ng-click="insertDocumentoIntegranteFamiliar()">
+							    	Inserir
+							    </md-button>
+			  				</div>
+			  				
 			  				<md-table-container>
 							  <table md-table md-row-select multiple ng-model="selected" md-progress="promise">
 							    <thead md-head md-order="query.order" md-on-reorder="getDesserts">
 							      <tr md-row>
 							        <th md-column md-order-by="nameToLower"><span>Documento</span></th>
 							        <th md-column md-numeric ><span>Numero</span></th>
+							        <th md-column md-numeric ><span>Ações</span></th>
 							      </tr>
 							    </thead>
 							    <tbody md-body>
 							      <tr md-row md-select="dessert" style="cursor:pointer" ng-repeat="documento in model.integranteFamiliar.entity.documentos">
 							        <td md-cell>{{::documento.tipoDocumento}}</td>
-							        <td md-cell>{{::documento.numeroDocumento }}</td>
+							        <td md-cell><input maxlength="144" name="numero" ng-blur="updateDocumento($event, documento)" required ng-model="documento.numeroDocumento"></td>
+							        <td md-cell> 
+								        <i class="zmdi zmdi-delete" ng-click="removeDocumentoIntegranteFamiliar(documento)" style="font-size: 25px; margin-left: 5px;"></i>
+							      	</td>
 							      </tr>
 							    </tbody>
 							  </table>
@@ -222,6 +252,12 @@
   	
 	  	<md-dialog-actions layout="row" layout-align="end center">
 		    <div layout="row" ng-if="model.integranteFamiliar.entity">
+			    <div>
+				    <md-button class="md-raised md-primary md-hue-3" type="button" ng-click="removeIntegranteFamiliar()">
+				    	Excluir integrante
+				    </md-button>
+			    </div>
+			    
 			    <div>
 				    <md-button class="md-raised md-primary md-hue-3" type="button" ng-click="cancel()">
 				    	Cancelar
