--- a/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/familia/popup/adicionar-integrante-familiar-popup.html
+++ b/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/familia/popup/adicionar-integrante-familiar-popup.html
@@ -253,7 +253,7 @@
 	  	<md-dialog-actions layout="row" layout-align="end center">
 		    <div layout="row" ng-if="model.integranteFamiliar.entity">
 			    <div>
-				    <md-button class="md-raised md-primary md-hue-3" type="button" ng-click="removeIntegranteFamiliar()">
+				    <md-button ng-if="model.integranteFamiliar.entity.id" class="md-raised md-primary md-hue-3" type="button" ng-click="removeIntegranteFamiliar()">
 				    	Excluir integrante
 				    </md-button>
 			    </div>
