--- a/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/familia/familia-form.html
+++ b/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/familia/familia-form.html
@@ -221,7 +221,7 @@
 					
 <!-- 					TAB INTEGRANTE FAMILIAR -->
 					
-					<md-tab label="Integrante Familiar">
+					<md-tab label="Integrante Familiar" ng-if="model.familia.entity.id">
 						<div layout-fill style="height:50%">
 				    		<md-toolbar layout-fill style="min-height: 100% !important;position:absolute;" class="md-hue-3" md-theme="{{osmTheme}}">
 								<div class="default-frame" style="overflow:auto">
