--- a/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/menu-sidenav.html
+++ b/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/menu-sidenav.html
@@ -30,7 +30,7 @@
 			</md-button>
 			
 			<md-button style="text-align: left;"
-				ng-click="toggleMenuSideNavHandler('crianca.add');">
+				ng-click="toggleMenuSideNavHandler('crianca.list');">
 				<md-icon class="zmdi zmdi-accounts zmdi-hc-fw zmdi-hc-2x"></md-icon>
 				Crianças
 			</md-button>
