--- a/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/index.html
+++ b/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/index.html
@@ -23,6 +23,7 @@
 		<script type="text/javascript" th:src="@{/modules/home/controllers/familia/familia-controller.js}"></script>
 		<script type="text/javascript" th:src="@{/modules/home/controllers/familia/popup/adicionar-integrante-familiar-controller-popup.js}"></script>
 	
+		<script type="text/javascript" th:src="@{/modules/home/controllers/crianca/popup/selecionar-familia-controller-popup.js}"></script>
 		<script type="text/javascript" th:src="@{/modules/home/controllers/crianca/crianca-controller.js}"></script>
 	</head>
 		
