--- a/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/static/css/theme.css
+++ b/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/static/css/theme.css
@@ -49,6 +49,12 @@ md-select {
 	color:black
 }
 
+.default-paginator {
+    font-size: 13px;
+    padding-right: 40px;
+    height: 60px;
+}
+
 /* Cabeçalho principal para todas as dialogs */
 .default-popup-header { display: block; height: 60px; min-height: 60px !important; max-height: 60px; }
 
